<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:enabled="true"
        android:icon="@drawable/search"
        android:title="@string/home" />

    <item
        android:id="@+id/navigation_dashboard"
        android:enabled="true"
        android:icon="@drawable/list_bulleted"
        android:title="@string/list" />

    <item
        android:id="@+id/navigation_notifications"
        android:enabled="true"
        android:icon="@drawable/store"
        android:title="@string/stores" />

    <item
        android:id="@+id/navigation_profile"
        android:enabled="true"
        android:icon="@drawable/profile"
        android:title="@string/profile" />

    <item
        android:id="@+id/navigation_cart"
        android:enabled="true"
        android:icon="@drawable/grocery_store"
        android:title="@string/cart" />

</menu>