<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layoutDescription="@xml/fragment_home_scene">

    <View
        android:id="@+id/actionBar"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:background="@color/green_500"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/left16dpGuideline"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/right16dpGuideline"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_end="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/right80percentGuideline"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".8" />

    <TextView
        android:id="@+id/titleView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/search_products"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/searchBtn"
        app:layout_constraintStart_toStartOf="@id/left16dpGuideline"
        app:layout_constraintEnd_toEndOf="@id/right16dpGuideline"
        app:layout_constraintVertical_bias="1" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/collapsedSearchBtn"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:text="@string/search"
        style="@style/CollapsedSearchButton"
        android:visibility="invisible"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/actionBar"
        app:layout_constraintStart_toStartOf="@id/left16dpGuideline"
        app:layout_constraintEnd_toStartOf="@id/right16dpGuideline"
        app:layout_constraintVertical_bias="0" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/searchBtn"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:text="@string/search"
        style="@style/SearchButton"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/actionBar"
        app:layout_constraintStart_toStartOf="@id/left16dpGuideline"
        app:layout_constraintEnd_toStartOf="@id/right80percentGuideline"
        app:layout_constraintVertical_bias="0.85" />

    <ImageButton
        android:id="@+id/barCodeBtn"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:backgroundTint="@color/white"
        android:src="@drawable/qr_code_scanner"
        android:contentDescription="@string/bar_code_button_description"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/actionBar"
        app:layout_constraintStart_toStartOf="@id/right80percentGuideline"
        app:layout_constraintEnd_toEndOf="@id/right16dpGuideline"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintVertical_bias="0.85" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:paddingBottom="80dp"
        android:clipToPadding="false"
        app:layout_constraintTop_toBottomOf="@id/actionBar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/nestedLeft16dpGuideline"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="16dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/nestedRight16dpGuideline"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:orientation="vertical"
                app:layout_constraintGuide_end="16dp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/catalogueView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="42dp"
                app:layout_constraintVertical_chainStyle="packed"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintVertical_bias="0"/>

            <TextView
                android:id="@+id/productListTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="42dp"
                android:text="@string/limited_offers"
                style="@style/ListHeader"
                app:layout_constraintTop_toBottomOf="@id/catalogueView"
                app:layout_constraintBottom_toTopOf="@id/productList"
                app:layout_constraintStart_toStartOf="@id/nestedLeft16dpGuideline"
                app:layout_constraintEnd_toEndOf="@id/nestedRight16dpGuideline" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/productList"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="42dp"
                app:layout_constraintTop_toBottomOf="@id/productListTitle"
                app:layout_constraintBottom_toTopOf="@id/bestPriceListTitle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/bestPriceListTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="42dp"
                android:text="@string/best_price"
                style="@style/ListHeader"
                app:layout_constraintTop_toBottomOf="@id/productList"
                app:layout_constraintBottom_toTopOf="@id/bestPriceList"
                app:layout_constraintStart_toStartOf="@id/nestedLeft16dpGuideline"
                app:layout_constraintEnd_toEndOf="@id/nestedRight16dpGuideline" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/bestPriceList"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="42dp"
                app:layout_constraintTop_toBottomOf="@id/bestPriceListTitle"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.motion.widget.MotionLayout>